Fixing bug 40180. If the profile directory is deleted, a new directory is created with default contents on all platforms. On Mac, which is the main concern of this bug, the folder in the trash is ignored and the new folder is considered as an active profile directory. r=sfraser